Fixed insecure function with function suggested by SonarQube